# svjis2

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: build-docker.yml  make-messages.yml  make-uv-lock.yml  playwright-tests.yml  unit-tests.yml
svjis/: Dockerfile  manage.py
svjis/articles/: admin.py  forms.py  managers.py  model_utils.py  models.py  permissions.py  sitemaps.py  tests.py  urls.py  user_agent.py  utils.py  views.py  views_admin.py  views_adverts.py  views_contact.py  views_faults.py  views_personal_settings.py  views_redaction.py
svjis/articles/management/commands/: setup_svjis.py  svjis_migrate_from_fb.py  svjis_send_messages.py  svjis_setup.py  svjis_test.py
svjis/articles/migrations/: 0001_initial.py  0002_alter_article_options_alter_articlecomment_options_and_more.py  0002_alter_articlemenu_id.py  0002_alter_faultasset_options_alter_faultcomment_options_and_more.py  0002_userpermission_userrole_userprofile.py  0002_userprofile.py  0003_alter_article_options.py  0003_alter_articlemenu_options_article_menu.py  0003_applicationsetup_buliding_company_messagequeue.py  0003_buliding_company_messagequeue_preferences.py  0003_news.py  0003_usefullink.py  0004_alter_company_name.py  0004_alter_userprofile_options_board.py  0004_alter_userprofile_options_board_and_more.py  0004_articlelog.py  0004_board.py  0004_board_building_buildingentrance_buildingunit_and_more.py  0005_alter_articlecomment_options.py  0005_alter_articlelog_user.py  0005_article_visible_for_all_article_visible_for_group.py  0005_article_visible_for_all_article_visible_for_group_and_more.py  0006_alter_company_header_picture.py  0006_alter_news_body.py  0006_faultreportlog.py  0006_survey_surveyoption_surveyanswerlog.py  0007_alter_articleasset_options.py  0007_article_allow_comments_articlecomment.py  0007_article_slug.py  0007_company_website_language.py  0008_alter_article_slug_faultreport_faultcomment_and_more.py  0008_alter_articlecomment_body.py  0008_faultreport_faultcomment_faultasset.py  0008_faultreportlog.py  0009_adverttype_advert_advertasset.py  0009_articlelog_user_agent.py  0010_alter_article_body.py  0010_alter_article_body_alter_article_perex.py  0010_alter_building_land_registry_no_and_more.py  0011_alter_article_slug_alter_faultreport_slug.py  (+1 more)
svjis/articles/static/css/: desktop.css  main.css  print.css  style.css  (+6 more)
svjis/articles/templates/: admin_about.html  admin_board.html  admin_board_edit.html  admin_building_edit.html  admin_building_unit.html  admin_building_unit_edit.html  admin_building_unit_owners_edit.html  admin_company_edit.html  admin_entrance.html  admin_entrance_edit.html  admin_group.html  admin_group_edit.html  admin_messages.html  admin_preferences.html  admin_preferences_edit.html  admin_property.html  admin_property_edit.html  admin_user.html  admin_user_detail.html  admin_user_edit.html  admin_user_ownes_edit.html  advert_edit.html  adverts_list.html  article.html  article_comment_edit.html  aside-menu.html  base-with-aside-menu-content.html  base-with-aside-menu.html  base.html  box-01-news.html  box-01.html  box-02-top-articles.html  box-02.html  box-03-survey.html  box-03.html  box-04-useful-links.html  box-04.html  box-news.html  box-survey.html  box-top-articles.html  (+43 more)
svjis/articles/templatetags/: article_filters.py
svjis/articles/tests/: test_adverts.py  test_articles.py  test_faults.py  test_menu.py  test_migrations.py  test_playwright.py  test_user_agent.py  test_views.py
svjis/articles/tests_playwright/: commands.py  test_desktop.py  test_mobile.py  test_playwright.py  test_tablet.py
svjis/svjis/: .dockerignore  __init__.py  asgi.py  settings.py  urls.py  wsgi.py
(+29 files in other folders)
