[project]
name = "svjis2"
version = "2.20.1"
description = "Information system for homeowners' associations (SVJ)"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
dependencies = [
    "django>=5.2.6",
    "django-tinymce>=4.1.0",
    "openpyxl>=3.1.5",
    "psycopg>=3.2.10",
]

[project.urls]
Homepage = "https://svjis.github.io/"
Repository = "https://github.com/svjis/svjis2"
Issues = "https://github.com/svjis/svjis2/issues"

[tool.black]
line-length = 119
target-version = ['py310']
include = '\.pyi?$'
skip-string-normalization = 1
force-exclude = '''
/(
  \.venv
  | migrations
)/
'''

[tool.django-stubs]
django_settings_module = "svjis.svjis.settings"

[dependency-groups]
dev = [
    "django-stubs>=5.2.5",
    "factory-boy>=3.3.3",
    "playwright>=1.55.0",
    "pre-commit>=4.3.0",
]
