[project]
name = "svjis2"
version = "2.24.0.dev1"
description = "Information system for homeowners' associations (SVJ)"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.6,<7.0",
    "django-tinymce>=4.1.0",
    "openpyxl>=3.1.5",
    "psycopg>=3.2.10",
]

[project.urls]
Homepage = "https://svjis.github.io/"
Repository = "https://github.com/svjis/svjis2"
Issues = "https://github.com/svjis/svjis2/issues"

[tool.django-stubs]
django_settings_module = "svjis.svjis.settings"

[dependency-groups]
dev = [
    "django-stubs>=5.2.5",
    "factory-boy>=3.3.3",
    "playwright>=1.55.0",
    "pre-commit>=4.3.0",
]
linux-server = [
    "gunicorn>=23.0.0",
]

[tool.ruff]
line-length = 119
indent-width = 4
extend-exclude = ["svjis/manage.py", "svjis/svjis/settings.py", "svjis/articles/migrations"]

[tool.ruff.lint]
# Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["E4", "E7", "E9", "F", "B"]

# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

# Ignore `E402` (import violations) in all `__init__.py` files, and in selected subdirectories.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.format]
# Preserve quotes in `ruff format`.
quote-style = "preserve"
