[project]
name = "svjis2"
version = "2.25.1"
description = "Information system for homeowners' associations (SVJ)"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "django>=6,<7",
  "django-tinymce>=4.1",
  "openpyxl>=3.1.5",
  "psycopg>=3.2.10",
]
urls.Homepage = "https://svjis.github.io/"
urls.Issues = "https://github.com/svjis/svjis2/issues"
urls.Repository = "https://github.com/svjis/svjis2"
urls.Translations = "https://translate.codeberg.org/engage/svjis/"

[dependency-groups]
dev = [
  "django-stubs>=5.2.5",
  "factory-boy>=3.3.3",
  "playwright>=1.55",
  "pre-commit>=4.3",
]
linux-server = [
  "gunicorn>=23",
]

[tool.ruff]
line-length = 119
indent-width = 4
extend-exclude = [ "svjis/articles/migrations", "svjis/manage.py", "svjis/svjis/settings.py" ]
# Preserve quotes in `ruff format`.
format.quote-style = "preserve"
# Enable flake8-bugbear (`B`) rules, in addition to the defaults.
lint.select = [ "B", "E4", "E7", "E9", "F" ]
lint.per-file-ignores."**/{tests,docs,tools}/*" = [ "E402" ]
# Ignore `E402` (import violations) in all `__init__.py` files, and in selected subdirectories.
lint.per-file-ignores."__init__.py" = [ "E402" ]
# Avoid trying to fix flake8-bugbear (`B`) violations.
lint.unfixable = [ "B" ]

[tool.django-stubs]
django_settings_module = "svjis.svjis.settings"
